# PythonTestFramework

pyWebTests/: pyproject.toml
pyWebTests/features/: example.feature
pyWebTests/features/steps/: example_steps.py
pyWebTests/tests/: test_example.py
